# sdl-render

./: .gitignore  README.md  deps.toml
.github/workflows/: build_linux.yml
src/: CMakeLists.txt
src/examples/: CMakeLists.txt  main.c
src/include/sdl-render/: font.h  gamepad.h  mixer.h  rect.h  sprite.h  util.h  window.h
src/lib/: CMakeLists.txt  sdl_font.c  sdl_gamepad.c  sdl_mixer.c  sdl_rect.c  sdl_sprite.c  sdl_window.c
